--- a/index.html
+++ b/index.html
@@ -2,38 +2,43 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Complete Response Portfolio</title>
-    <link rel="stylesheet" href="style.css" media="screen">
-    <link rel="stylesheet" href="desktop.css" media="screen and (max width: 205px)"> 
-    <link rel="stylesheet" href="mobile.css" media="screen and (max width: 205px)">
-    <link rel="shortcut icon" href="images/logoya.png" type="image/x-icon">
+    <title>Portfolio - Home</title>
+    <link rel="stylesheet" href="main.css" media="screen">
+    <link rel="stylesheet" href="desktop.css" media="screen and (max width: 205px)">
+    <link rel="stylesheet" href="desktop2.css" media="screen and (max width: 205px)">
 </head>
-    <body id="clicked">
+<body id="clicked">
 
-    <div class="hero">
+<div class="hero">
+    <header>
         <nav>
-            <img src="images/logoya.png" class="logoya">
             <ul>
                 <li><a href="index.html">Home</a></li>
+                <li><a href="project.html">Projects</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="videoDemo.html">Video Demo</a></li>
                 <li><a href="sitereport.html">Site Report</a></li>
-                <li><a href="workexperience.html">Work Experience</a></li>
             </ul>
         </nav>
-        <div class="detel">
-            <h1>I am Joshua <span>cookey</span></h1>
-            <p>This This is my portfolio Website to show all
-                <br> Details and Work Experrience Web Development
-            </p>
-        <a href="#">Download CV</a>    
+    </header>
+    <main>
+        <h1>I am Joshua Bamgbose </h1>
+        <p> I am Joshua Bamgbose, a relentless innovator and passionate advocate for positive change. 
+            <br> With a background steeped in technology and a deep-seated entrepreneurial spirit, <br> I am driven by the belief that <br> innovation holds the key to solving <br> the world's most pressing challenges. <br> My journey is 
+            defined by a relentless pursuit of excellence and a <br> commitment to leveraging cutting-edge solutions 
+            to make a tangible impact in the world.</p>
+
+            <p> Catalyzing Change Through Innovation </p>
+
+            <a href="#">Download CV</a>
+            <div class="images">
+                <img src="images/avatar4.png" class="avatar">
+            </div>
         </div>
-        <div class="images">
-            <img src="images/shapes.png" class="shapes">
-            <img src="images/profilepo2.png">
-        </div>
-  
+    </main>
+<footer>&copy; Josh B 2024</footer>
+</body>
+
 </body>
 </html>
